# kaggle-pipeline

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
models/: README.md
src/: README.md  __init__.py
src/data/: README.md  __init__.py
src/features/: __init__.py
src/models/: README.md  __init__.py
