[tool.poetry]
name = "kaggle-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kaggle_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
python-dotenv = "^0.21.1"
kaggle = "^1.5.12"

[tool.poetry.group.dev.dependencies]
nbdime = "^3.1.1"
black = {extras = ["jupyter"], version = "^23.1.0"}
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
