[project]
name = "kaggle-pipeline"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Dubrovin", email = "books.booksovich@yandex.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "python-dotenv>=1.0.1",
    "kaggle>=1.6.14",
    "mlflow>=2.14.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
